e2e-manifests/01-deny-all-traffic-to-an-application.yml
apiVersion: v1
kind: Namespace
metadata:
  name: 01-deny-all-traffic-to-an-application
  labels:
    illuminatio-e2e: 01-deny-all-traffic-to-an-application
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
  namespace: 01-deny-all-traffic-to-an-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: nginx
        name: web
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
  namespace: 01-deny-all-traffic-to-an-application
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web
  type: ClusterIP
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-deny-all
  namespace: 01-deny-all-traffic-to-an-application
spec:
  podSelector:
    matchLabels:
      app: web
  ingress: []
