e2e-manifests/02-limit-traffic-to-an-application.yml
apiVersion: v1
kind: Namespace
metadata:
  name: 02-limit-traffic
---
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    app: bookstore
    role: api
  name: apiserver
  namespace: 02-limit-traffic
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: bookstore
      role: api
  template:
    metadata:
      labels:
        app: bookstore
        role: api
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: apiserver
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bookstore
    role: api
  name: apiserver
  namespace: 02-limit-traffic
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: bookstore
    role: api
  type: ClusterIP
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow
  namespace: 02-limit-traffic
spec:
  podSelector:
    matchLabels:
      app: bookstore
      role: api
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: bookstore
