e2e-manifests/02a-allow-all-traffic-to-an-application.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    app: web
  name: web
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: web
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  generation: 1
  name: web-deny-all
spec:
  podSelector:
    matchLabels:
      app: web
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  generation: 1
  name: web-allow-all
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app: web
  policyTypes:
  - Ingress
