e2e-manifests/10-allowing-traffic-with-multiple-selectors.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    app: bookstore
    role: db
  name: db
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: bookstore
      role: db
  template:
    metadata:
      labels:
        app: bookstore
        role: db
    spec:
      containers:
      - image: redis:4
        imagePullPolicy: IfNotPresent
        name: db
        ports:
        - containerPort: 6379
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bookstore
    role: db
  name: db
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: bookstore
    role: db
  type: ClusterIP
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: redis-allow-services
spec:
  podSelector:
    matchLabels:
      app: bookstore
      role: db
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: bookstore
          role: search
    - podSelector:
            matchLabels:
              app: bookstore
              role: api
    - podSelector:
            matchLabels:
              app: inventory
              role: web
